Fixed markdown error

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -134,8 +134,7 @@ experiences:
       details: |
          - Authored extensive documentation for Hyundai i30, Veloster, Tucson and Santa Fe
            press release launches
-         - Responsible for complex projects- e.g. collected, analysed and presented [MoTeC]
-           (https://www.motec.com.au/home) Data to Queensland Police Service to advise them 
+         - Responsible for complex projects- e.g. collected, analysed and presented [MoTeC](https://www.motec.com.au/home) Data to Queensland Police Service to advise them 
            of the pros and cons of different vehicles and tyres when choosing the type and 
            specs for their [next highway patrol fleet car](https://www.carsguide.com.au/car-news/queensland-police-snaps-up-hyundai-sonata-57685)
          - Coordinated an all-round rally experience for a group of Korean Journalists at Rally Australia
